[package]
name = "pycc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
inkwell = { version = "0.6", features = ["llvm18-1"] }

[dev-dependencies]
tempfile = "3.8"
inkwell = { version = "0.6", features = ["llvm18-1"] }
